--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <hr>
 
     <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-    <img src="../4.3 HTML Porfolio Project/assets/images/my movies-ivona.PNG" height="200px" alt="top 3 movies">
+    <img src="./assets/images/my movies-ivona.PNG" height="200px" alt="top 3 movies">
 
     
     <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
